--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,11 +7,12 @@ body {
 }
 
 .content {
-  background-color: #000000e3;
+  background-color: #a7832a99;
+  padding: 15px;
 }
 
 .title {
-  color: goldenrod;
+  color: white;
   text-align: center;
   font-size: 68px;
   margin: auto;
@@ -19,29 +20,25 @@ body {
 }
 
 #nav-me {
-  background-color: #67676773 !important;
+  background-color: #2c2c2c !important;
+  padding: 0px !important;
 }
 
 .navAll {
-  color: goldenrod !important;
-  font-family: "Spirax", cursive;
-  font-size: 25px;
-  background-color: #060606;
-  margin: 15px;
-  border-radius: 10px;
+  color: white !important;
+  font-family: "Alegreya SC", serif;
+  font-family: "Cormorant Infant", serif;
+  font-size: 18px;
   padding: 10px;
   text-align: center;
-  border: 2px solid white;
+  font-weight: bold;
+  margin: auto;
 }
 
 .navAll:hover {
   text-decoration: none;
-  color: red !important;
-  background-color: whitesmoke;
-  border-top: 5px solid black;
-  border-right: 2px solid black;
-  border-left: 2px solid black;
-  border-bottom: 5px solid black;
+  background-color: red;
+  background-size: auto;
 }
 
 .form-inline {
@@ -97,14 +94,161 @@ body {
 
 @media screen and (max-width: 1024px) {
   .navAll {
-    font-size: 16px;
+    font-size: 19px;
   }
+}
+
+@media screen and (min-width: 1024px) {
+  .img-connexion {
+    display: none;
+  }
+
+  .navMain {
+    margin-left: 125px;
+  }
+}
+
+.navbar-toggler {
+  margin-left: 5px;
 }
 
 h2 {
   text-align: center;
-  color: blanchedalmond;
+  color: black;
   font-size: 25px;
   margin-top: 20px;
+  font-family: "Cinzel", serif;
+  margin-bottom: 15px;
+  padding: 10px;
+  text-decoration: underline;
+}
+
+.second-body {
+  background-color: white;
+  display: block;
+  width: 100%;
+  padding: 15px;
+  margin: auto;
+  color: black;
+  font-size: 18px;
+  font-family: "Asap", sans-serif;
+}
+
+footer {
+  background-color: #2c2c2c;
+  padding: 10px;
+}
+
+.footer-content {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+          flex-direction: row;
+  -webkit-box-pack: center;
+          justify-content: center;
+}
+
+.infos-footer {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+}
+
+.footer-web {
+  color: white;
+  margin: 5px;
+}
+
+.footer-web:hover {
+  text-decoration: none;
+  color: red;
+}
+
+.f-two {
+  border-right: 1px solid gray;
+  border-left: 1px solid gray;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.myform {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+          flex-direction: row;
+}
+
+.form-registration {
+  display: block;
+  margin: auto;
+}
+
+.btn {
+  background: goldenrod;
+}
+
+.rules-checked:hover {
+  text-decoration: none;
+}
+
+.connect-choice {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+          flex-direction: row;
+  justify-content: space-around;
+}
+
+@media screen and (max-width: 834px) {
+  .connect-choice {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
+  }
+
+  .card-connexion {
+    margin-top: 10px;
+  }
+}
+
+.card-connexion:hover {
+  text-decoration: none;
+  box-shadow: 10px 5px 5px black;
+}
+
+.card-title {
+  color: black;
+  font-family: "Alegreya SC", serif;
+  font-family: "Cormorant Infant", serif;
+  font-weight: bold;
+}
+
+.card-text {
+  color: black;
+  font-family: "Asap", sans-serif;
+}
+
+.btn-warning {
+  display: block;
+  margin: auto;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.btn-inscription {
+  width: 30%;
+}
+
+.img-connexion {
+  margin-right: 26px;
 }
 
