--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -7,11 +7,12 @@ body{
 }
 
 .content{
-    background-color: #000000e3 ;
-}
+    background-color: #a7832a99;
+    padding: 15px;
+} 
 
 .title{
-    color:goldenrod;
+    color:white;
     text-align: center;
     font-size: 68px;
     margin: auto;
@@ -20,31 +21,27 @@ body{
 
 ///navbar main//
 #nav-me{
-    background-color: #67676773 !important;
+    background-color: #2c2c2c!important;
+    padding: 0px!important;
 }
 
 /// All navs ///
 
 .navAll{
-    color: goldenrod!important;
-    font-family: 'Spirax', cursive;
-    font-size: 25px;
-    background-color: #060606;
-    margin: 15px;
-    border-radius:10px;
+    color: white!important;
+    font-family: 'Alegreya SC', serif;
+    font-family: 'Cormorant Infant', serif;
+    font-size: 18px;
     padding: 10px;
     text-align: center;
-    border: 2px solid white;
+    font-weight: bold;
+    margin: auto;
 }
 
 .navAll:hover{
     text-decoration: none;
-    color:red!important;
-    background-color: whitesmoke;
-    border-top: 5px solid black;
-    border-right: 2px solid black;
-    border-left: 2px solid black;
-    border-bottom: 5px solid black;
+    background-color: red;
+    background-size: auto;
 }
 
 .form-inline{
@@ -93,7 +90,7 @@ body{
 @media screen and (max-width: 834px){
     .search-field{
         width: 80vw;
-    }
+    }  
 }
 
 @media screen and (min-width: 1440px){
@@ -104,15 +101,82 @@ body{
 
 @media screen and (max-width: 1024px){
 .navAll{
-    font-size: 16px;
+    font-size: 19px;
 }
+}
+
+@media screen and (min-width: 1024px){
+.img-connexion{
+    display: none;
+}
+.navMain{
+    margin-left: 125px;
+}
+}
+.navbar-toggler{
+    margin-left: 5px;
 }
 
 ///title h2///
 
 h2{
     text-align: center;
-    color: blanchedalmond;
+    color: black;
     font-size: 25px;
     margin-top: 20px;
+    font-family: 'Cinzel', serif;
+    margin-bottom: 15px;
+    padding: 10px;
+    //border-bottom: 1px solid gray;
+    text-decoration: underline;
+
+}
+////////////corps//////////////////
+
+.second-body{
+    background-color:white;
+    display: block;
+    width: 100%;
+    padding: 15px;
+    margin: auto;
+    color: black;
+    font-size: 18px;
+    font-family: 'Asap', sans-serif;
+}
+
+////////////footer/////////////////
+footer{
+    background-color: #2c2c2c;
+    padding: 10px;
+}
+
+.footer-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+}
+
+.infos-footer{
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-web{
+    color: white;
+    margin:5px;
+}
+
+.footer-web:hover{
+    text-decoration: none;
+    color:red;
+}
+
+.f-two{
+    border-right:1px solid gray;
+    border-left: 1px solid gray;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left:10px;
+    margin-right:10px;
 }
