--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,11 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
 }
 
 .content {
@@ -57,6 +62,10 @@ body {
   color: white;
 }
 
+.connect-nav {
+  color: chartreuse !important;
+}
+
 .btn-outline {
   color: whitesmoke;
   background-color: goldenrod;
@@ -104,7 +113,11 @@ body {
   }
 
   .navMain {
-    margin-left: 125px;
+    margin-left: 50px;
+  }
+
+  .connect-block {
+    margin-left: 30vw;
   }
 }
 
@@ -115,7 +128,7 @@ body {
 h2 {
   text-align: center;
   color: black;
-  font-size: 25px;
+  font-size: 23px;
   margin-top: 20px;
   font-family: "Cinzel", serif;
   margin-bottom: 15px;
@@ -197,17 +210,45 @@ footer {
   text-decoration: none;
 }
 
-.connect-choice {
+.connect-page {
   display: -webkit-box;
   display: flex;
-  -webkit-box-orient: horizontal;
+  margin-bottom: 10px;
+}
+
+.connect-login {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-          flex-direction: row;
-  justify-content: space-around;
+          flex-direction: column;
+}
+
+.registration {
+  color: black;
+}
+
+.hr-connect {
+  width: 1px;
+  height: 300px;
+  background-color: black;
 }
 
 @media screen and (max-width: 834px) {
-  .connect-choice {
+  .btn-warning {
+    display: block;
+    margin: auto;
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  .img-connexion {
+    margin-right: 26px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .connect-page {
     display: -webkit-box;
     display: flex;
     -webkit-box-orient: vertical;
@@ -215,40 +256,13 @@ footer {
             flex-direction: column;
   }
 
-  .card-connexion {
-    margin-top: 10px;
+  .hr-connect {
+    width: 250px;
+    height: 1px;
   }
-}
 
-.card-connexion:hover {
-  text-decoration: none;
-  box-shadow: 10px 5px 5px black;
-}
-
-.card-title {
-  color: black;
-  font-family: "Alegreya SC", serif;
-  font-family: "Cormorant Infant", serif;
-  font-weight: bold;
-}
-
-.card-text {
-  color: black;
-  font-family: "Asap", sans-serif;
-}
-
-.btn-warning {
-  display: block;
-  margin: auto;
-  text-align: center;
-  margin-top: 20px;
-}
-
-.btn-inscription {
-  width: 30%;
-}
-
-.img-connexion {
-  margin-right: 26px;
+  .registr-mobile {
+    margin-bottom: 40px;
+  }
 }
 
