--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -1,9 +1,13 @@
+
 body{
     background-image: url("img/negobodygreek.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
+    display: flex;
+    flex-direction: column;
+
 }
 
 .content{
@@ -62,7 +66,11 @@ body{
     color: white;
 }
 
-//////button search/////
+.connect-nav{
+    color: chartreuse!important;
+}
+
+//////search/////
 
 .btn-outline{
     color: whitesmoke;
@@ -85,12 +93,15 @@ body{
     display: inline-flex;
     justify-content: center;
     }
+    
 }
 
 @media screen and (max-width: 834px){
     .search-field{
         width: 80vw;
-    }  
+    }
+    
+    
 }
 
 @media screen and (min-width: 1440px){
@@ -103,16 +114,21 @@ body{
 .navAll{
     font-size: 19px;
 }
+
 }
 
 @media screen and (min-width: 1024px){
-.img-connexion{
-    display: none;
+    .img-connexion{
+        display: none;
+    }
+    .navMain{
+        margin-left: 50px;
+    }
+    .connect-block{
+        margin-left: 30vw;
+    }
 }
-.navMain{
-    margin-left: 125px;
-}
-}
+////menu burger///
 .navbar-toggler{
     margin-left: 5px;
 }
@@ -122,7 +138,7 @@ body{
 h2{
     text-align: center;
     color: black;
-    font-size: 25px;
+    font-size: 23px;
     margin-top: 20px;
     font-family: 'Cinzel', serif;
     margin-bottom: 15px;
