--- a/resources/sass/artworks.scss
+++ b/resources/sass/artworks.scss
@@ -20,7 +20,7 @@ height: 200px;
 margin: 10px;
 transition: .5s ease;
 }
-.allimg:hover{
+.containerart:hover .allimg{
     box-shadow: 17px 18px 6px black;
     opacity: 0.8;
 }
