--- a/public/css/app.css
+++ b/public/css/app.css
@@ -650,14 +650,15 @@ h3 {
   font-size: 15px;
 }
 
-tr,
-td,
-th {
+.trback,
+.tdback,
+.thback {
   border: 1px solid black;
   padding: 10px;
 }
 
-table {
+.table-one,
+.table-two {
   margin-bottom: 30px;
 }
 
@@ -801,6 +802,7 @@ h3 {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
+  margin-bottom: 20px;
 }
 
 .inputcreate {
