--- a/resources/sass/backselfer.scss
+++ b/resources/sass/backselfer.scss
@@ -5,12 +5,12 @@
     font-size: 15px;
 }
 
-tr, td, th{
+.trback, .tdback, .thback{
     border: 1px solid black;
     padding: 10px;
 }
 
-table{
+.table-one, .table-two{
    margin-bottom: 30px;
 }
 
