--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,7 @@
 @import'layout';
 @import'mixin';
 @import'create';
+@import'loader';
 
 // @import url('https://unpkg.com/aos@2.3.1/dist/aos.css');
 @import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
