--- a/resources/sass/layout.scss
+++ b/resources/sass/layout.scss
@@ -133,3 +133,13 @@
     opacity: 0.8;
     filter: grayscale(100%);
 }
+
+.title-logo{
+    font-size: 58px;
+    margin: auto;
+    color: #a7072a;
+}
+
+a:hover{
+    text-decoration: none;
+}
