--- a/public/css/app.css
+++ b/public/css/app.css
@@ -156,7 +156,6 @@ h2 {
   font-family: "Cinzel", serif;
   margin-bottom: 15px;
   padding: 10px;
-  text-decoration: underline;
 }
 
 h4 {
@@ -574,6 +573,10 @@ h1 {
   position: absolute;
   z-index: 2;
   top: 25%;
+  width: 80%;
+  background-color: #2c2c2ce6;
+  margin-left: 10%;
+  color: white;
 }
 
 #bcfull {
@@ -613,6 +616,36 @@ h3 {
 
 .tableau {
   display: none;
+}
+
+#negoIdem {
+  display: none;
+  color: white;
+  background-color: #2c2c2ce6;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 30px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  padding: 10px;
+  width: 80%;
+  margin: auto;
+  height: 55vh;
+}
+
+.textIdem {
+  margin: auto;
+}
+
+.btn-negoIdem {
+  justify-content: space-around;
+  margin: auto;
+  width: 35%;
+}
+
+.valueEnd {
+  color: goldenrod;
 }
 
 .size_time {
