--- a/resources/sass/negoappli.scss
+++ b/resources/sass/negoappli.scss
@@ -181,6 +181,10 @@ h1{
     position: absolute;
     z-index: 2;
     top:25%;
+    width: 80%;
+    background-color: #2c2c2ce6;
+    margin-left: 10%;
+    color: white;
 }
 
 #bcfull{
@@ -215,4 +219,32 @@ h3{text-align: center;}
 
 .tableau{
     display: none;
+}
+
+#negoIdem{
+    display: none;
+    color: white;
+    background-color: #2c2c2ce6;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 30px;
+    flex-direction: column;
+    padding: 10px;
+    width: 80%;
+    margin: auto;
+    height: 55vh;
+}
+
+.textIdem{
+    margin: auto;
+}
+
+.btn-negoIdem{
+    justify-content: space-around;
+    margin: auto;
+    width: 35%;
+}
+
+.valueEnd{
+    color: goldenrod;
 }
