--- a/resources/sass/base.scss
+++ b/resources/sass/base.scss
@@ -228,4 +228,11 @@ footer{
     color:red;
 }
 
+.container{
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
 
+.card{
+    padding:10px!important;
+}
