--- a/resources/sass/connexionScreen.scss
+++ b/resources/sass/connexionScreen.scss
@@ -65,3 +65,27 @@
         margin-bottom: 40px;
     }
 }
+.connecttrue{
+    background-color:#a7072a;
+    color: white;
+    border-radius:40px;
+    width: 20vw;
+    text-align: center;
+    margin-bottom: 10px;
+    }
+
+    .connecttrue:hover{
+        color:white;
+    }
+
+    .navuser:hover {
+        background-color: white!important;
+    }
+
+    .logoutitem{
+    background-color: #a7072a!important;
+    border-radius:40px;
+    width:76%!important;
+    margin-right:10%!important;
+    margin-top:-10px;
+    }
