--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,11 @@
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
 @import'base';
 @import'forms';
 @import'connexionScreen';
@@ -13,5 +21,3 @@
 // @import url('https://unpkg.com/aos@2.3.1/dist/aos.css');
 @import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Merriweather+Sans&display=swap');
-
-
