--- a/resources/sass/artworks.scss
+++ b/resources/sass/artworks.scss
@@ -39,7 +39,9 @@ transition: .5s ease;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%)
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+    
   }
   
   .containerart:hover {
