bug encore des bugs

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,7 @@
 @import'mixin';
 @import'create';
 @import'loader';
+@import'mediaqueries';
 
 // @import url('https://unpkg.com/aos@2.3.1/dist/aos.css');
 @import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
