--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11766,7 +11766,7 @@ li {
   background-color: #4CAF50;
   color: white;
   font-size: 25px;
-  padding: 16px 32px;
+  padding: 10px;
   font-weight: bold;
 }
 
@@ -11790,7 +11790,7 @@ li {
 .btnart {
   margin: auto;
   display: block;
-  width: 20%;
+  width: 190px;
   text-align: center;
 }
 
@@ -12068,7 +12068,10 @@ h3 {
 
 .table-one,
 .table-two {
-  margin-bottom: 30px;
+  margin: auto;
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
 }
 
 .tablebackselfer {
@@ -12246,6 +12249,10 @@ input {
   text-align: center;
 }
 
+#fornegociation {
+  display: none;
+}
+
 .background_loader {
   /*active un fondu quand le loader est fini */
   -webkit-transition: visibility 1s ease-in-out, opacity 1s ease-in-out;
@@ -12350,6 +12357,26 @@ input {
   100% {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
+  }
+}
+
+@media screen and (max-width: 840px) {
+  .forms {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
+    margin: auto;
+    width: 350px;
+  }
+
+  .dropdown-menu {
+    margin-left: -24px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .theTitle {
+    margin: auto;
   }
 }
 
