--- a/resources/sass/artworks.scss
+++ b/resources/sass/artworks.scss
@@ -56,7 +56,7 @@ transition: .5s ease;
     background-color: #4CAF50;
     color: white;
     font-size: 25px;
-    padding: 16px 32px;
+    padding: 10px;
     font-weight: bold;
   }
 
@@ -81,6 +81,6 @@ transition: .5s ease;
   .btnart{
   margin: auto;
   display: block;
-  width: 20%;
+  width:190px;
   text-align: center;
   }
